--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	<br>
 	<section class="titu" "col-lg-12 col-md-9 order-md-3">
 		<span style="position: absolute; top: 90 px; left: 70px;">
-		<h1 style="color: violet;">CAMBIO ITEM DESDE PC A GITHUB</h1>
+		<h1 style="color: red;">CAMBIO ITEM DESDE PC A GITHUB233</h1>
 		</span>
 		<br>
 	</section>
